# nominal-script

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Nominal.sln  Nominal.vcxproj  Nominal.vcxproj.filters  README.md
Dependencies/Catch/: catch.hpp
Executable/: CMakeLists.txt
Include/: NomInterpreter.h  NomState.h  NomString.h  NomValue.h  Nominal.h
Include/Nominal/: Integer.h  Map.h  Number.h  Real.h  State.h  String.h  Value.h
Interactive/: CMakeLists.txt
Interactive/Source/: Main.c  main.c
Modules/: IO.ns
Nominal/: CodeGen.c  CodeGen.h  HashTable.c  HashTable.h  Heap.c  Heap.h  Lexer.c  Lexer.h  Main.c  Map.c  Node.c  Node.h  Number.c  Parser.c  Parser.h  State.c  State.h  String.c  String.h  StringPool.c  StringPool.h  Value.c  Value.h
NominalInteractive/: NominalInteractive.vcxproj  NominalInteractive.vcxproj.filters
NominalInteractive/Source/: Main.c
Source/: ByteCode.c  ByteCode.h  CodeGen.c  CodeGen.h  HashTable.c  HashTable.h  Heap.c  Heap.h  Integer.c  Lexer.c  Lexer.h  Main.c  Map.c  Node.c  Node.h  NomInterpreter.c  NomValue.c  Number.c  Parser.c  Parser.h  Real.c  Scope.c  Scope.h  State.c  State.h  String.c  String.h  StringPool.c  StringPool.h  Type.h  Value.c  Value.h
Tests/: CMakeLists.txt  Main.cpp  MapTests.cpp  NumberTests.cpp  StateTests.cpp  Tests.sublime-project
Tests/Negative/: CallUncallable.ns  InvokeUninvokable.ns  TooManyArguments.ns
Tests/Positive/: Arithmetic.ns  ClassCreation.ns  ClassGetAndSet.ns  Comments.ns  Fibonacci.ns  Functions.ns  GetIntrinsicClass.ns  If.ns  Map.ns  ObjectConstructors.ns  Objects.ns  OverloadArithmetic.ns  ShortCircuitAnd.ns  ShortCircuitOr.ns  ToString.ns  While.ns  class_get_and_set.ns  overload_arithmetic.ns  short_circuit_and.ns  short_circuit_or.ns
Tests/Source/: Main.cpp  MapTests.cpp  NumberTests.cpp  StateTests.cpp  functiontests.cpp  main.cpp  maptests.cpp  negativetests.cpp  numbertests.cpp  positivetests.cpp  statetests.cpp
Tools/: format.py
Tools/Sublime/: Nominal.tmLanguage
UnitTests/: HashTableTests.h  Main.c  MapTests.h  NumberTests.h  StateTests.h  UnitTests.vcxproj  UnitTests.vcxproj.filters
UnitTests/CUnit/Headers/: CUnit.h  TestDB.h
UnitTests/CUnit/Sources/Automated/: Automated.c
UnitTests/CUnit/Sources/Framework/: TestDB.c  Util.c
UnitTests/CUnit/Sources/Win/: Win.c  Win.h
UnitTests/Source/: HashTableTests.h  Main.c  MapTests.h  RealTests.h  StateTests.h
UnitTests/Source/CUnit/Headers/: Util.h
UnitTests/Source/CUnit/Sources/Framework/: CUError.c
executable/: CMakeLists.txt
executable/source/: main.c
tests/: CMakeLists.txt
tests/positive/: arithmetic.ns  class_creation.ns  comparison_operators.ns  fibonacci.ns  get_intrinsic_class.ns  import.ns  object_constructors.ns  objects.ns  to_string.ns  while.ns
tests/source/: functiontests.cpp  maptests.cpp  negativetests.cpp  numbertests.cpp  positivetests.cpp  statetests.cpp
